--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job-pilot</title>
+    <!-- Use %PUBLIC_URL% for favicon -->
+    
   </head>
   <body>
     <div id="root"></div>
